# Clotho

./: .gitignore  AGENTS.md  CHANGELOG.md  GROUP_MEETING_GFUNCTION_VOLUME.md  GROUP_MEETING_GRID_SEARCH.md  GROUP_MEETING_SUMMARY.md  README.md  TODO.md  pyproject.toml
notes/: project-state.md
notes/session-logs/: 2026-05-13-msrv-hdssrv-vf.md  2026-05-14-mineru-web-source-cleanup.md  README.md
reports/weekly_sprint/: PPT_OUTLINE_CLOTHO_SPRINT.md  README.md  WEEKLY_REPORT_CLOTHO_SPRINT.md
reports/weekly_sprint/artifacts/: artifact_manifest.csv  closure_g_time_efficiency_audit.csv  fluid_efficiency_stage_summary.csv  fracture_initiation_tp_audit.csv  fracture_initiation_tp_summary.csv  physical_pkn_stage_summary.csv  report_core_numbers.csv  tp_reachability_audit.csv
sources/web/: Practical guidelines for DFIT interpretation using the ‘compliance method’ procedure from URTeC-2019-123.md
src/clotho/: __init__.py  batch.py  cli.py  closure.py  g_function.py  grid_search.py  pressure_derivative.py  review.py  stage_data.py
tests/: test_basic.py  test_batch.py  test_closure.py  test_g_function.py  test_grid_search.py  test_pressure_derivative.py  test_review.py  test_stage_data.py
